Fixed overflow-x

--- a/styles.css
+++ b/styles.css
@@ -153,6 +153,10 @@ select {
 
 */
 /* START NORMAL CODING FROM HERE */
+body {
+  overflow-x: hidden;
+}
+
 .top-container {
   display: flex;
   height: 100vh;
@@ -213,13 +217,13 @@ select {
 
 .piano {
   height: 100%;
-  width: 100%;
+  width: 50vw;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   justify-content: center;
   gap: 0.75vh;
-  margin-left: 10vw;
+  padding-left: 5vw;
 }
 
 .key {
@@ -241,6 +245,7 @@ select {
   transform-style: preserve-3d;
   transition: all 0.3s;
   transition-timing-function: ease, ease;
+  width: 100%;
 }
 
 .blue {
